--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,5 +1,23 @@
 @import 'variables';
 
+@font-face {
+    font-family: Roboto;
+    src: url(../fonts/Roboto-Regular.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(../fonts/Roboto-Medium.ttf);
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(../fonts/Roboto-Bold.ttf);
+    font-weight: 700;
+}
+
 h1 {
     font-size: 60px;
     line-height: 90px;
