--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -41,3 +41,21 @@ h2 {
         line-height: 27px;   
     }
 }
+
+.main-form {
+    max-width: 570px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.input-form {
+    width: 273px;
+    height: 50px;
+}
+
+.input-button {
+    width: 100%;
+    height: 57px;
+
+    background-color: $green;
+}
