--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,31 @@ h2 {
   }
 }
 
+.main-form {
+  max-width: 570px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-form {
+  width: 273px;
+  height: 50px;
+}
+
+.input-button {
+  width: 100%;
+  height: 57px;
+  background-color: #34C176;
+}
+
+.mt-200 {
+  margin-top: 200px;
+}
+
+.mb-200 {
+  margin-bottom: 200px;
+}
+
 html {
   font-size: 18px;
   line-height: 1.5;
