--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,20 +39,36 @@ h2 {
   }
 }
 
+.header {
+  background-image: url("../images/artist-page-discography-section-mobile.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.content {
+  width: 1200px;
+}
+
 .main-form {
   max-width: 570px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .input-form {
-  width: 273px;
-  height: 50px;
+  min-width: 270px;
+  min-height: 50px;
+  margin-bottom: 1.5rem;
+  border: 2px solid #CACACA;
+  border-radius: 3px;
+  background-color: none;
 }
 
 .input-button {
   width: 100%;
   height: 57px;
+  border-radius: 5px;
   background-color: #34C176;
 }
 
@@ -62,6 +78,26 @@ h2 {
 
 .mb-200 {
   margin-bottom: 200px;
+}
+
+.ml-30 {
+  margin-left: 30px;
+}
+
+.mr-30 {
+  margin-right: 30px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.pl-20 {
+  padding-left: 20px;
 }
 
 html {
