--- a/src/scss/atom.scss
+++ b/src/scss/atom.scss
@@ -5,3 +5,23 @@
 .mb-200 {
     margin-bottom: 200px;
 }
+
+.ml-30 {
+    margin-left: 30px;
+}
+
+.mr-30 {
+    margin-right: 30px;
+}
+
+.mt-20 {
+    margin-top: 20px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.pl-20 {
+    padding-left: 20px;
+}
