--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -42,20 +42,42 @@ h2 {
     }
 }
 
+.header {
+    background-image: url('../images/artist-page-discography-section-mobile.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.content {
+    width: 1200px;
+}
+
+
 .main-form {
     max-width: 570px;
+
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .input-form {
-    width: 273px;
-    height: 50px;
+    min-width: 270px;
+    min-height: 50px;
+
+    margin-bottom: 1.5rem;
+    
+    border: 2px solid $gray;
+    border-radius: 3px;
+
+    background-color: none;
 }
 
 .input-button {
     width: 100%;
     height: 57px;
+
+    border-radius: 5px;
 
     background-color: $green;
 }
